# imgc-marl

./: .gitignore  LICENSE  README.md  setup.cfg  stderr.txt
imgc_marl/: callbacks.py  evaluation.py  models.py  policy.py  utils.py
imgc_marl/envs/: multiagent.py  population.py  single_agent.py  utils.py
imgc_marl/models/: __init__.py  basic_communication.py  basic_naming_game.py  centralized_critic_models.py  full_communication.py  full_naming_game.py  full_naming_game_single_matrix.py
imgc_marl/policies/: __init__.py  basic_communication.py  basic_naming_game.py  full_communication.py  full_naming_game.py  full_naming_game_single_matrix.py
notebooks/: communication.ipynb  communication_q_networks_results.ipynb  full_naming_game.ipynb  lp_alignment.ipynb  lp_analysis.ipynb  naming_game_results.ipynb  paper_insights.ipynb  paper_results.ipynb  paper_results.py  paper_specialization.ipynb  paper_specialization.py  probabilistic_setup_naming_game.ipynb  quicktest.ipynb  rebuttal_results.ipynb  results.ipynb  results_zeroshot.ipynb  specialization.ipynb  specialization.pkl  train_rllib.ipynb
scripts/: characterize_env.py  make_video.py  run_experiment.slurm.err  run_experiment.slurm.out  run_experiment_3_centralized.slurm  run_experiment_3_double_condition.slurm  run_experiment_3_independent.slurm  run_experiment_centralized.slurm  run_experiment_double_condition.slurm  run_experiment_independent.slurm  stderr.txt  train.py  train.slurm  train_population.py  train_rllib.py  train_sb3.py
scripts/configs/: basic_marl.yml  goal_lines_2agents_25align_all_modified.yml  (+45 more)
(+132 files in other folders)
