[metadata]
name = imgc-marl
version = 0.0.1
description = package associated to the Intrinsically Motivated Goal Conditioned Multi-agent Reinforcement Learning project

[options]
packages = find:
install_requires =
    pip==22.0.4
    jupyterlab==3.3.4
    matplotlib==3.5.1
    gym==0.21.0
    simple-playgrounds @ https://github.com/gaorkl/simple-playgrounds/archive/master.zip
    opencv-python==4.5.5.64
    stable-baselines3==1.5.0